# nil-calc

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: deploy.yml
core/: Cargo.toml
scripts/: build.ps1
src/: App.vue  main.ts
src/assets/: index.css
src/components/: Sheet.vue
src/types/: index.d.ts
web/: package.json  vite.config.js
web/src/: App.vue
web/src/assets/: index.css
